--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -149,7 +149,7 @@
     <ClCompile Include="Game\Scene\Methods\SceneFactory.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Game\Scene\DebugScene.cpp">
+    <ClCompile Include="Game\Scene\DebugScene\DebugScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Game\Time\GameTimer.cpp">
@@ -325,7 +325,7 @@
     <ClInclude Include="Game\Scene\Manager\SceneManager.h" />
     <ClInclude Include="Game\Scene\Methods\IScene.h" />
     <ClInclude Include="Game\Scene\Methods\SceneFactory.h" />
-    <ClInclude Include="Game\Scene\DebugScene.h" />
+    <ClInclude Include="Game\Scene\DebugScene\DebugScene.h" />
     <ClInclude Include="Game\Time\GameTimer.h" />
     <ClInclude Include="Engine\Core\Graphics\Managers\ImGuiManager.h" />
     <ClInclude Include="Engine\Editor\ImGuiEditor.h" />
