--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -287,6 +287,9 @@
     <ClCompile Include="Game\Editor\Object\Object3DEditor.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\Component\MaterialComponent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -390,6 +393,7 @@
     <ClInclude Include="Game\Algorithm\StateTimer.h" />
     <ClInclude Include="Game\Object3D\Environment\StageField.h" />
     <ClInclude Include="Game\Editor\Object\Object3DEditor.h" />
+    <ClInclude Include="Engine\Core\Component\MaterialComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
